--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/leader22/timemitter#readme",
   "devDependencies": {
-    "rollup": "^0.50.0"
+    "rollup": "^0.50.0",
+    "rollup-plugin-license": "^0.5.0"
   }
 }
