--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/timemitter.js",
   "module": "./src/timemitter.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "rollup -c"
   },
   "repository": {
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/leader22/timemitter#readme",
   "devDependencies": {
+    "jest": "^21.2.1",
     "rollup": "^0.50.0",
     "rollup-plugin-license": "^0.5.0"
   }
